fix(hero): gap

--- a/src/components/home/hero/index.module.scss
+++ b/src/components/home/hero/index.module.scss
@@ -4,6 +4,7 @@
 	justify-content: space-between;
 	align-items: center;
 	padding: 3rem 20%;
+	gap: 2rem;
 
 	.content {
 		animation: slideInFromLeft 1.5s ease-out;
